# basic-treesitter-cranelift-jit

./: Cargo.toml  README.md  build.rs
benches/: calculator_bench.rs  calculator_random_bench.rs
examples/: stress.rs
src/: lib.rs  main.rs  repl.rs
src/language/: error.rs  input_buffer.rs  mod.rs
tree-sitter-calculator/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-calculator/bindings/c/: tree-sitter-calculator.pc.in
tree-sitter-calculator/bindings/go/: binding.go  binding_test.go
tree-sitter-calculator/bindings/node/: binding.cc  index.js
tree-sitter-calculator/bindings/python/tests/: test_binding.py
tree-sitter-calculator/bindings/rust/: build.rs  lib.rs
tree-sitter-calculator/queries/: highlights.scm
tree-sitter-calculator/src/: grammar.json  node-types.json  parser.c
