[package]
name = "adder-treesitter-cranelift"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "calculator_bench"
harness = false

[[bench]]
name = "calculator_random_bench"
harness = false

[dependencies]
tree-sitter = "0.24"
cranelift = "0.114.0"
cranelift-module = "0.114.0"
cranelift-jit = "0.114.0"
cranelift-native = "0.114.0"
parking_lot = "0.12.3"
dashmap = "6.1.0"
ahash = "0.8"
fastrand = "2.2"
crossterm = "0.28.1"
miette = {  version = "7.4.0", features = ["fancy"] }
tree-sitter-calculator = { path = "tree-sitter-calculator" }
thiserror = "2.0.3"
streaming-iterator = "0.1.9"
rand = "0.9.0-beta.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true  # Keep debug symbols for profiling

[[example]]
name = "stress"